# DeepFuse

./: .gitignore  CMakeLists.txt  LICENSE  README.md
apps/: README.md
apps/gpt2/: CMakeLists.txt  main.cpp
apps/host-multi/: CMakeLists.txt  NVMeLoader.hpp  NVMeLoader_Linux.hpp  main.cpp
apps/lenet5/: CMakeLists.txt  main.cpp
apps/perceptron/: CMakeLists.txt  main.cpp
apps/rag/: CMakeLists.txt  main.cpp
apps/resnet20/: CMakeLists.txt  main.cpp
datasets/MNIST/: ReadMe.txt
dnn/: CMakeLists.txt  README.md
dnn/core/: cuda.cu  cuda.cuh  device.cu  device.cuh  layer.cuh  tensor.cu  tensor.cuh  tensor_transpose.cu
dnn/layers/: activation_layer.cu  activation_layer.cuh  batch_norm_layer.cu  batch_norm_layer.cuh  conv_layer.cu  conv_layer.cuh  embedding_layer.cu  embedding_layer.cuh  flatten_layer.cu  flatten_layer.cuh  fully_connected_layer.cu  fully_connected_layer.cuh  global_pooling_layer.cu  layer_norm_layer.cu  layer_norm_layer.cuh  multi_head_attention.cu  multi_head_attention.cuh  pooling_layer.cu  pooling_layer.cuh  residual_add_layer.cu  residual_add_layer.cuh  residual_block.cu  residual_block.cuh  softmax_layer.cu  softmax_layer.cuh  transformer_block.cu  transformer_block.cuh
dnn/layers/activation/: activation_layer.cu  activation_layer.cuh  relu_layer.cu  relu_layer.cuh  sigmoid_layer.cu  sigmoid_layer.cuh  tanh_layer.cu  tanh_layer.cuh
dnn/layers/conv/: conv_layer.cu  conv_layer.cuh
dnn/layers/linear/: fully_connected_layer.cu  fully_connected_layer.cuh
dnn/layers/pooling/: avg_pool_layer.cu  avg_pool_layer.cuh  pooling_layer.cu  pooling_layer.cuh
dnn/layers/reshape/: flatten_layer.cu  flatten_layer.cuh
dnn/losses/: binary_cross_entropy.cu  binary_cross_entropy.cuh  cross_entropy.cu  cross_entropy.cuh  loss.cuh
dnn/models/: gpt2.cu  gpt2.cuh  inference_model.cuh  lenet5.cu  lenet5.cuh  model.cu  model.cuh  natural_language_model.cuh  perceptron.cu  perceptron.cuh  resnet20.cu  resnet20.cuh  resnet32.cu  resnet32.cuh  resnet56.cu  resnet56.cuh  training_model.cuh
dnn/optimizers/: adam_optimizer.cu  adam_optimizer.cuh  optimizer.cuh  sgd_optimizer.cu  sgd_optimizer.cuh
dnn/rag/: document_store.cu  document_store.cuh  rag_model.cu  rag_model.cuh  retriever.cu  retriever.cuh
dnn/tokens/: bpe_tokenizer.cu  bpe_tokenizer.cuh  positional_encoding.cu  positional_encoding.cuh  token_embedding.cu  token_embedding.cuh  tokenizer.cu  tokenizer.cuh  vocab_loader.cu  vocab_loader.cuh
dnn/utils/: cifar10_loader.cuh  clip_grad_norm.cu  common.cuh  convert.cu  cudnn.cu  infinity.cu  json.cpp  json.h  mnist_loader.cu  mnist_loader.cuh  onnx_loader.cu  onnx_loader.cuh  pad2d.cu  scalar.cu  text_processing.cu  text_processing.cuh  vector_search.cu  vector_search.cuh
tests/: CMakeLists.txt  README.md
tests/core/: cuda_test.cu  device_test.cu  tensor_test.cu
tests/layers/: activation_layer_test.cu  batch_norm_layer_test.cu  conv_layer_test.cu  fully_connected_layer_test.cu  multi_head_attention_test.cu  pooling_layer_test.cu  residual_add_layer_test.cu  residual_block_test.cu  softmax_layer_test.cu  transformer_block_test.cu
tests/layers/activation/: activation_layer_test.cu  sigmoid_layer_test.cu  tanh_layer_test.cu
tests/layers/conv/: conv_layer_test.cu
tests/layers/linear/: fully_connected_layer_test.cu
tests/layers/pooling/: pooling_layer_test.cu
tests/losses/: binary_cross_entropy_test.cu  cross_entropy_test.cu
tests/models/: gpt2_test.cu  lenet5_test.cu
tests/optimizers/: adam_optimizer_test.cu  sgd_optimizer_test.cu
tests/rag/: document_store_test.cu  text_processing_test.cu
tests/tokens/: bpe_tokenizer_test.cu  positional_encoding_test.cu  token_embedding_test.cu  vocab_loader_test.cu
tests/utils/: json_test.cpp  mnist_loader_test.cu  onnx_loader_test.cu
